--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -13,12 +13,14 @@ importMethodsFrom(Biobase, AnnotatedDataFrame, annotatedDataFrameFrom,
                   featureNames, fvarLabels, pData, preproc, "preproc<-",
                   protocolData, sampleNames, varLabels)
 importMethodsFrom(biovizBase, mold)
+importMethodsFrom(ggbio, autoplot)
 importMethodsFrom(methods, initialize, show)
 importFrom(Biobase, assayDataElement, assayDataElementNames, assayDataNew,
            copyEnv, MIAME, multiassign)
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(ggbio, GGbio)
-importFrom(ggplot2, aes, ggplot)
+importFrom(ggiraph, geom_point_interactive)
+importFrom(ggplot2, aes, aes_string, ggplot)
 importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
 importFrom(stats, as.formula, quantile)
@@ -51,7 +53,8 @@ exportMethods(NanoStringRccSet,
               endogenousSubset, housekeepingSubset,
               negativeControlSubset, positiveControlSubset,
               controlSubset, nonControlSubset, signatureSubset,
-              esApply, esBy, transform, with)
+              esApply, esBy, transform, with,
+              autoplot)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export non-generic functions
