Move graphics methods into its own source file

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -13,6 +13,7 @@ License: Artistic-2.0
 Collate: RccMetadata.R
          NanoStringRccSet-class.R
          NanoStringRccSet-utils.R
+         NanoStringRccSet-plot.R
          readRccFile.R
          readRlfFile.R
          readNanoStringRccSet.R
