Rename Math.R as utils.R

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -22,5 +22,5 @@ Collate: RccMetadata.R
          readRlfFile.R
          readNanoStringRccSet.R
          writeNanoStringRccSet.R
-         Math.R
+         utils.R
          zzz.R
