--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -15,8 +15,8 @@ importMethodsFrom(Biobase, AnnotatedDataFrame, annotatedDataFrameFrom,
 importMethodsFrom(biovizBase, mold)
 importMethodsFrom(ggbio, autoplot)
 importMethodsFrom(methods, initialize, show)
-importFrom(Biobase, assayDataElement, assayDataElementNames, assayDataNew,
-           copyEnv, MIAME, multiassign)
+importFrom(Biobase, assayDataElement, "assayDataElement<-",
+           assayDataElementNames, assayDataNew, copyEnv, MIAME, multiassign)
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(ggbio, GGbio)
 importFrom(ggiraph, geom_point_interactive)
@@ -24,7 +24,7 @@ importFrom(ggplot2, aes, aes_string, ggplot, scale_x_continuous,
            scale_y_continuous)
 importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
-importFrom(stats, as.formula, model.frame, quantile)
+importFrom(stats, as.formula, coef, lm, model.frame, quantile)
 importFrom(utils, read.csv, write.csv)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -55,7 +55,7 @@ exportMethods(NanoStringRccSet, show,
               negativeControlSubset, positiveControlSubset,
               controlSubset, nonControlSubset, signatureSubset,
               esApply, esBy, transform, with,
-              autoplot)
+              normalize, autoplot)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export non-generic functions
