--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -6,8 +6,8 @@ Encoding: UTF-8
 Author: Patrick Aboyoun
 Maintainer: Patrick Aboyoun <paboyoun@nanostring.com>
 Depends: R (>= 3.3.0), Biobase, ggbio
-Imports: BiocGenerics, Biostrings, biovizBase, ggiraph, ggplot2, IRanges,
-         methods, S4Vectors, stats, utils
+Imports: BiocGenerics, Biostrings, biovizBase, ggiraph, ggplot2, grDevices,
+         IRanges, methods, pheatmap, RColorBrewer, S4Vectors, stats, utils
 Suggests: RUnit
 License: Artistic-2.0
 Collate: RccMetadata.R
