--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -22,8 +22,11 @@ importFrom(ggbio, GGbio)
 importFrom(ggiraph, geom_point_interactive)
 importFrom(ggplot2, aes, aes_string, ggplot, scale_x_continuous,
            scale_y_continuous)
+importFrom(grDevices, colorRampPalette)
 importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
+importFrom(pheatmap, pheatmap)
+importFrom(RColorBrewer, brewer.pal)
 importFrom(stats, as.formula, coef, lm, model.frame, quantile)
 importFrom(utils, read.csv, write.csv)
 
