--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
 importFrom(pheatmap, pheatmap)
 importFrom(RColorBrewer, brewer.pal)
+importFrom(scales, percent)
 importFrom(stats, as.formula, coef, lm, model.frame, quantile)
 importFrom(utils, read.csv, write.csv)
 
