--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -6,8 +6,9 @@ Encoding: UTF-8
 Author: Patrick Aboyoun
 Maintainer: Patrick Aboyoun <paboyoun@nanostring.com>
 Depends: R (>= 3.3.0), Biobase, ggbio
-Imports: BiocGenerics, Biostrings, biovizBase, ggiraph, ggplot2, grDevices,
-         IRanges, methods, pheatmap, RColorBrewer, S4Vectors, stats, utils
+Imports: BiocGenerics, Biostrings, biovizBase, ggbeeswarm, ggiraph, ggplot2,
+         grDevices, IRanges, methods, pheatmap, RColorBrewer, S4Vectors, stats,
+         utils
 Suggests: RUnit
 License: Artistic-2.0
 Collate: RccMetadata.R
@@ -20,6 +21,7 @@ Collate: RccMetadata.R
          NanoStringRccSet-normalize.R
          NanoStringRccSet-ggplot.R
          NanoStringRccSet-autoplot.R
+         NanoStringRccSet-exprsplot.R
          readRccFile.R
          readRlfFile.R
          readNanoStringRccSet.R
