--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -18,10 +18,11 @@ importMethodsFrom(methods, initialize, show)
 importFrom(Biobase, assayDataElement, "assayDataElement<-",
            assayDataElementNames, assayDataNew, copyEnv, MIAME, multiassign)
 importFrom(Biostrings, BStringSet, DNAStringSet)
+importFrom(ggbeeswarm, position_beeswarm)
 importFrom(ggbio, GGbio)
-importFrom(ggiraph, geom_point_interactive)
-importFrom(ggplot2, aes, aes_string, ggplot, scale_x_continuous,
-           scale_y_continuous)
+importFrom(ggiraph, GeomInteractivePoint, geom_point_interactive)
+importFrom(ggplot2, aes, aes_string, geom_boxplot, ggplot, layer,
+           scale_x_continuous, scale_x_discrete, scale_y_continuous)
 importFrom(grDevices, colorRampPalette)
 importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
@@ -44,7 +45,7 @@ export(NanoStringRccSet,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
-       esBy)
+       esBy, exprsplot)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export S4 methods
@@ -58,7 +59,7 @@ exportMethods(NanoStringRccSet, show,
               negativeControlSubset, positiveControlSubset,
               controlSubset, nonControlSubset, signatureSubset,
               esApply, esBy, transform, with,
-              normalize, autoplot)
+              normalize, autoplot, exprsplot)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export non-generic functions
