Remove dependence on biovizBase and ggbio

--- a/NanoStringBase/DESCRIPTION
+++ b/NanoStringBase/DESCRIPTION
@@ -5,11 +5,10 @@ Version: 0.0.1
 Encoding: UTF-8
 Author: Patrick Aboyoun
 Maintainer: Patrick Aboyoun <paboyoun@nanostring.com>
-Depends: R (>= 3.3.0), Biobase, ggbio
-Imports: BiocGenerics, Biostrings, biovizBase, ggbeeswarm, ggiraph, ggplot2,
-         grDevices, IRanges, methods, pheatmap, RColorBrewer, S4Vectors, stats,
-         utils
-Suggests: RUnit
+Depends: R (>= 3.3.0), Biobase
+Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, ggplot2, grDevices,
+         IRanges, methods, pheatmap, RColorBrewer, S4Vectors, stats, utils
+Suggests: biovizBase, ggbio, RUnit
 License: Artistic-2.0
 Collate: RccMetadata.R
          NanoStringRccSet-class.R
@@ -20,7 +19,7 @@ Collate: RccMetadata.R
          NanoStringRccSet-summary.R
          NanoStringRccSet-normalize.R
          NanoStringRccSet-ggplot.R
-         NanoStringRccSet-autoplot.R
+         NanoStringRccSet-protoplot.R
          NanoStringRccSet-exprsplot.R
          readRccFile.R
          readRlfFile.R
