--- a/NanoStringBase/NAMESPACE
+++ b/NanoStringBase/NAMESPACE
@@ -12,14 +12,11 @@ importMethodsFrom(Biobase, AnnotatedDataFrame, annotatedDataFrameFrom,
                   assayData, "assayData<-", esApply, exprs, fData, featureData,
                   featureNames, fvarLabels, pData, preproc, "preproc<-",
                   protocolData, sampleNames, varLabels)
-importMethodsFrom(biovizBase, mold)
-importMethodsFrom(ggbio, autoplot)
 importMethodsFrom(methods, initialize, show)
 importFrom(Biobase, assayDataElement, "assayDataElement<-",
            assayDataElementNames, assayDataNew, copyEnv, MIAME, multiassign)
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(ggbeeswarm, position_beeswarm)
-importFrom(ggbio, GGbio)
 importFrom(ggiraph, GeomInteractivePoint, geom_point_interactive)
 importFrom(ggplot2, aes, aes_string, geom_boxplot, ggplot, layer,
            scale_x_continuous, scale_x_discrete, scale_y_continuous)
@@ -45,21 +42,22 @@ export(NanoStringRccSet,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
-       esBy, exprsplot)
+       esBy, munge, protoplot, exprsplot)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export S4 methods
 
 exportMethods(NanoStringRccSet, show,
-              sData, svarLabels, mold,
+              sData, svarLabels,
               signatureWeights, "signatureWeights<-",
               design, "design<-",
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
               negativeControlSubset, positiveControlSubset,
               controlSubset, nonControlSubset, signatureSubset,
-              esApply, esBy, transform, with,
-              normalize, autoplot, exprsplot)
+              esApply, esBy, with,
+              munge, transform,
+              normalize, protoplot, exprsplot)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export non-generic functions
