Move NanoStringNCTools to NanoString360Report

--- a/NanoString360Report/DESCRIPTION
+++ b/NanoString360Report/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: NanoStringNCTools
+Package: NanoString360Report
 Title: NanoString nCounter® Tools
 Description: Tools for NanoString Technologies nCounter® Technology.
 Version: 0.0.1
