Add new signatureScores generic and NanoStringRccSet method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ exportClasses(NanoStringRccSet)
 export(NanoStringRccSet,
        sData, svarLabels,
        signatureWeights, "signatureWeights<-",
+       signatureScores,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
@@ -53,6 +54,7 @@ export(NanoStringRccSet,
 exportMethods(NanoStringRccSet, show,
               sData, svarLabels,
               signatureWeights, "signatureWeights<-",
+              signatureScores,
               design, "design<-",
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
