--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: NanoStringNCTools
-Title: NanoString nCounter® Tools
-Description: Tools for NanoString Technologies nCounter® Technology.
+Title: NanoString nCounter Tools
+Description: Tools for NanoString Technologies nCounter Technology.
 Version: 0.0.1
 Encoding: UTF-8
 Author: Patrick Aboyoun
