--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,7 +78,8 @@ export(readNanoStringRccSet,
        sIntThresh, sIntCenter, sIntScale,
        fAbove, fBelow, fAtLeast, fAtMost,
        sAbove, sBelow, sAtLeast, sAtMost,
-       logt, log2t)
+       logt, log2t,
+       geom_beeswarm_interactive)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export S3 methods
