Add signatureLength generic and method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,7 @@ exportClasses(NanoStringRccSet)
 export(NanoStringRccSet,
        sData, svarLabels,
        signatureWeights, "signatureWeights<-",
-       signatureScores,
+       signatureLength, signatureScores,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
@@ -55,7 +55,7 @@ export(NanoStringRccSet,
 exportMethods(NanoStringRccSet, show,
               sData, svarLabels,
               signatureWeights, "signatureWeights<-",
-              signatureScores,
+              signatureLength, signatureScores,
               design, "design<-",
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
