Add missing import of geom_line_interactive

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,8 @@ importFrom(Biobase, assayDataElement, "assayDataElement<-",
            assayDataElementNames, assayDataNew, copyEnv, MIAME, multiassign)
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(ggbeeswarm, position_beeswarm)
-importFrom(ggiraph, GeomInteractivePoint, geom_point_interactive)
+importFrom(ggiraph, GeomInteractivePoint, geom_line_interactive,
+           geom_point_interactive)
 importFrom(ggplot2, aes, aes_string, geom_boxplot, geom_hline, ggplot, layer,
            scale_color_manual, scale_x_continuous, scale_x_discrete,
            scale_y_continuous, stat_boxplot)
