Add new signatureNames generic and method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,7 @@ exportClasses(NanoStringRccSet)
 export(NanoStringRccSet,
        sData, svarLabels,
        signatureWeights, "signatureWeights<-",
-       signatureLength, signatureScores,
+       signatureNames, signatureLength, signatureScores,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
@@ -56,7 +56,7 @@ export(NanoStringRccSet,
 exportMethods(NanoStringRccSet, show,
               sData, svarLabels,
               signatureWeights, "signatureWeights<-",
-              signatureLength, signatureScores,
+              signatureNames, signatureLength, signatureScores,
               design, "design<-",
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
