--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,9 @@ Version: 0.0.1
 Encoding: UTF-8
 Author: Patrick Aboyoun
 Maintainer: Patrick Aboyoun <paboyoun@nanostring.com>
-Depends: R (>= 3.3.0), Biobase
-Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, ggplot2, grDevices,
-         IRanges, methods, pheatmap, RColorBrewer, S4Vectors, stats, utils
+Depends: R (>= 3.3.0), Biobase, ggplot2
+Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, grDevices, IRanges,
+         methods, pheatmap, RColorBrewer, S4Vectors, stats, utils
 Suggests: biovizBase, ggbio, RUnit
 License: Artistic-2.0
 Collate: RccMetadata.R
@@ -21,7 +21,7 @@ Collate: RccMetadata.R
          NanoStringRccSet-normalize.R
          NanoStringRccSet-munge.R
          NanoStringRccSet-ggplot.R
-         NanoStringRccSet-protoplot.R
+         NanoStringRccSet-autoplot.R
          readRccFile.R
          readRlfFile.R
          readNanoStringRccSet.R
