--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
 importFrom(pheatmap, pheatmap)
 importFrom(RColorBrewer, brewer.pal)
-importFrom(stats, as.formula, coef, lm, model.frame, quantile)
+importFrom(stats, as.formula, coef, lm, model.frame, quantile, update)
 importFrom(utils, read.csv, write.csv)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
