--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@
 import(BiocGenerics)
 import(S4Vectors)
 importClassesFrom(Biobase, AnnotatedDataFrame, AssayData, ExpressionSet, MIAME,
-                  Versions)
+                  VersionedBiobase, Versions)
 importClassesFrom(IRanges, NumericList)
 importClassesFrom(methods, ANY, character, environment, formula, list, matrix,
                   missing, "NULL", ".NULL")
@@ -17,11 +17,11 @@ importFrom(Biobase, assayDataElement, "assayDataElement<-",
            assayDataElementNames, assayDataNew, copyEnv, MIAME, multiassign)
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(ggbeeswarm, position_beeswarm)
-importFrom(ggiraph, GeomInteractivePoint, geom_boxplot_interactive,
-           geom_line_interactive, geom_point_interactive)
-importFrom(ggplot2, aes, aes_string, autoplot, geom_boxplot, geom_hline,
-           ggplot, layer, scale_color_manual, scale_x_continuous,
-           scale_x_discrete, scale_y_continuous, stat_boxplot)
+importFrom(ggiraph, geom_boxplot_interactive, geom_line_interactive,
+           geom_point_interactive, GeomInteractivePoint)
+importFrom(ggplot2, aes, aes_string, autoplot, geom_hline, ggplot, layer,
+           scale_color_manual, scale_x_continuous, scale_x_discrete,
+           scale_y_continuous, stat_boxplot)
 importFrom(grDevices, colorRampPalette)
 importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
@@ -33,15 +33,15 @@ importFrom(utils, read.csv, write.csv)
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export S4 classes
 
-exportClasses(NanoStringRccSet)
+exportClasses(SignatureSet, NanoStringRccSet)
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export S4 generics
 
-export(NanoStringRccSet,
+export("weights<-",
+       NanoStringRccSet,
        sData, svarLabels,
-       signatureWeights, "signatureWeights<-",
-       signatureNames, signatureLength, signatureScores,
+       signatures, "signatures<-", signatureScores,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
@@ -52,10 +52,11 @@ export(NanoStringRccSet,
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export S4 methods
 
-exportMethods(NanoStringRccSet, show,
+exportMethods(show,
+              weights, "weights<-", length, names, lengths,
+              NanoStringRccSet,
               sData, svarLabels,
-              signatureWeights, "signatureWeights<-",
-              signatureNames, signatureLength, signatureScores,
+              signatures, "signatures<-", signatureScores,
               design, "design<-",
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
@@ -68,7 +69,8 @@ exportMethods(NanoStringRccSet, show,
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 ### Export non-generic functions
 
-export(readNanoStringRccSet,
+export(SignatureSet,
+       readNanoStringRccSet,
        readRccFile,
        readRlfFile,
        writeNanoStringRccSet,
