--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,10 @@ importFrom(Biobase, assayDataElement, "assayDataElement<-",
 importFrom(Biostrings, BStringSet, DNAStringSet)
 importFrom(ggbeeswarm, position_beeswarm)
 importFrom(ggiraph, geom_boxplot_interactive, geom_line_interactive,
-           geom_point_interactive, GeomInteractivePoint)
-importFrom(ggplot2, aes, aes_string, autoplot, geom_hline, ggplot, layer,
-           scale_color_manual, scale_x_continuous, scale_x_discrete,
+           geom_point_interactive, GeomInteractiveBoxplot, GeomInteractiveLine,
+           GeomInteractivePoint)
+importFrom(ggplot2, aes, aes_string, autoplot, geom_hline, ggplot, guide_legend,
+           guides, layer, scale_x_continuous, scale_x_discrete,
            scale_y_continuous, stat_boxplot)
 importFrom(grDevices, colorRampPalette)
 importFrom(IRanges, NumericList)
