--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,9 @@ importFrom(ggbeeswarm, position_beeswarm)
 importFrom(ggiraph, geom_boxplot_interactive, geom_line_interactive,
            geom_point_interactive, GeomInteractiveBoxplot, GeomInteractiveLine,
            GeomInteractivePoint)
-importFrom(ggplot2, aes, aes_string, autoplot, geom_hline, ggplot, guide_legend,
-           guides, layer, scale_x_continuous, scale_x_discrete,
-           scale_y_continuous, stat_boxplot)
+importFrom(ggplot2, aes, aes_string, autoplot, element_blank, element_text,
+           geom_hline, ggplot, guide_legend, guides, layer, scale_x_continuous,
+           scale_x_discrete, scale_y_continuous, stat_boxplot, theme)
 importFrom(grDevices, colorRampPalette)
 importFrom(IRanges, NumericList)
 importFrom(methods, as, callGeneric, callNextMethod, is, validObject)
