--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ exportClasses(SignatureSet, NanoStringRccSet)
 
 export("weights<-",
        NanoStringRccSet,
-       sData, svarLabels,
+       sData, svarLabels, groups, "groups<-", version, "version<-",
        signatures, "signatures<-", signatureScores,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
@@ -49,7 +49,7 @@ export("weights<-",
 
 exportMethods(show,
               weights, "weights<-", length, names, lengths,
-              NanoStringRccSet,
+              NanoStringRccSet, groups, "groups<-", version, "version<-",
               sData, svarLabels, dimLabels, "dimLabels<-",
               signatures, "signatures<-", signatureScores,
               design, "design<-",
