forgot to export...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ exportClasses(SignatureSet, NanoStringRccSet)
 export("weights<-",
        NanoStringRccSet,
        sData, svarLabels, groups, "groups<-", version, "version<-",
-       signatures, "signatures<-", signatureScores,
+       signatures, "signatures<-", signatureScores, signatureGroups,
        endogenousSubset, housekeepingSubset,
        negativeControlSubset, positiveControlSubset,
        controlSubset, nonControlSubset, signatureSubset,
@@ -52,7 +52,7 @@ exportMethods(show,
               NanoStringRccSet, groups, "groups<-", version, "version<-",
               sData, svarLabels, dimLabels, "dimLabels<-",
               signatures, "signatures<-", signatureScores,
-              design, "design<-",
+              design, "design<-", signatureGroups,
               summary, "[", subset,
               endogenousSubset, housekeepingSubset,
               negativeControlSubset, positiveControlSubset,
