--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,9 @@ Title: NanoString nCounter Tools
 Description: Tools for NanoString Technologies nCounter Technology.
 Version: 0.99.0
 Encoding: UTF-8
-Author: Patrick Aboyoun
-Maintainer: Nicole Ortogero <nortogero@nanostring.com>, Zhi Yang <zyang@nanostring.com>
+Authors@R: c(person("Patrick", "Aboyoun", role = c("aut")), 
+             person("Nicole", "Ortogero", email = "nortogero@nanostring.com", role = c("cre")), 
+             person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("ctb")))
 Depends: R (>= 3.6), Biobase, S4Vectors, ggplot2
 Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, grDevices, IRanges,
          methods, pheatmap, RColorBrewer, stats, utils
