--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(person("Patrick", "Aboyoun", role = c("aut")),
 Depends: R (>= 3.6), Biobase, S4Vectors, ggplot2
 Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, grDevices, IRanges,
          methods, pheatmap, RColorBrewer, stats, utils
-Suggests: biovizBase, ggbio, RUnit, rmarkdown, knitr
+Suggests: biovizBase, ggbio, RUnit, rmarkdown, knitr, qpdf
 License: Artistic-2.0
 Collate: SignatureSet-class.R
          RccMetadata.R
