address import functions issues

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Authors@R: c(person("Patrick", "Aboyoun", role = c("aut")),
              person("Nicole", "Ortogero", email = "nortogero@nanostring.com", role = c("cre")), 
              person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("ctb")))
 Depends: R (>= 3.6), Biobase, S4Vectors, ggplot2
-Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, grDevices, IRanges,
-         methods, pheatmap, RColorBrewer, stats, utils
+Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, ggthemes, grDevices, IRanges,
+         methods, pheatmap, RColorBrewer, stats, utils, ggplotify
 Suggests: biovizBase, ggbio, RUnit, rmarkdown, knitr, qpdf
 License: Artistic-2.0
 Collate: SignatureSet-class.R
