--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,11 @@ Package: NanoStringNCTools
 Title: NanoString nCounter Tools
 Description: Tools for NanoString Technologies nCounter Technology.  Provides support for reading RCC files into an ExpressionSet
              derived object.  Also includes methods for QC and normalizaztion of NanoString data.
-Version: 1.11.1
+Version: 1.11.2
 Encoding: UTF-8
 Authors@R: c(person("Patrick", "Aboyoun", role = c("aut")), 
-             person("Nicole", "Ortogero", email = "nortogero@nanostring.com", role = c("cre")), 
+             person("Nicole", "Ortogero", email = "nortogero@nanostring.com", role = c("aut")), 
+			 person("Maddy", "Griswold", email = "mgriswold@nanostring.com", role = c("cre")),
              person("Zhi", "Yang", email = "zyang@nanostring.com", role = c("ctb")))
 Depends: R (>= 3.6), Biobase, S4Vectors, ggplot2
 Imports: BiocGenerics, Biostrings, ggbeeswarm, ggiraph, ggthemes, grDevices, IRanges,
